objects/Planet__c.object
<CustomObject>
    <fields>
        <fullName>Mass__c</fullName>
        <label>Mass</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Moon__c</fullName>
        <label># of Moon</label>
        <summaryForeignKey>Moon__c.Planet__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <label>Radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_System__c</fullName>
        <label>Star System</label>
        <referenceTo>Star_System__c</referenceTo>
        <relationshipLabel>Planets</relationshipLabel>
        <relationshipName>Planets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Planet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Planet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>